@@ -1,3 +1,5 @@
+* Sun Feb  4 2024 sandix@universal-logging-system.org
+  new functions %replacequoted and %unreplace
 * Sun Jan 28 2024 sandix@universal-logging-system.org
   new function %calc(<str>)
 * Sat Jan 13 2024 sandix@universal-logging-system.org
